correction overflow

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@
 
 @layer utilities {
 
+  html,
+    body {
+      overflow-x: hidden;
+      max-width: 100vw;
+    }
 
   /* animation degradé mouvement debut*/
 
